# user_management_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: github-actions.yml
app/: main.py
app/adapters/orm_engines/: models.py  sql_alchemy.py
app/adapters/repositories/: amazon_repo.py  inmemory_redis_repo.py  redis_repo.py
app/adapters/repositories/user/: inmemory_postgres_repo.py  postgres_repo.py
app/common/: app_settings.py  config.py  custom_logging.py  dependencies.py  security.py
app/common/exceptions/: base_exceptions.py  fast_api_sql_alchemy_exceptions.py
app/db/: database.py  db_session.py  models.py
app/db/dependencies/: database.py  repository.py
app/db/repositories/: postgres_repo.py  redis_repo.py
app/dependencies/: database.py  security.py  usecase_dependencies.py
app/domain/: group.py  user.py
app/ports/: cloud_port.py  redis_port.py  user_port.py
app/rest/: app_routes.py  auth_routes.py  schemas.py  user_routes.py
app/rest/routes/: app_routes.py  auth_routes.py  controllers.py  filters.py  schemas.py  user_routes.py
app/usecases/: auth.py  user.py
envs/: example.env
migrations/: env.py
migrations/versions/: 1fa1a103e8b1_autoincrement_id.py  3bafdd52f328_add_tables_edit_enum_field.py  3f3f3f29feac_removed_deleted_tables.py  4da218ee57ca_update_hashed_password_constraints.py  57ce77b48037_add_field_constraints.py  7ed5b72d745a_change_user_fields_settings_nullable.py  c2fb37fce0ac_added_image_path_selectin.py  d67bcd3e68da_added_user_and_group_table.py  f5b9a118e50c_update_hashed_password_constraints.py
ports/: postgres_port.py  redis_port.py
tests/: conftest.py
tests/integration/fixtures/: groups.py  users.py
tests/integration/test_routes/: app_test.py  auth_test.py  user_test.py
tests/unit_test/: auth_usecase_test.py  user_usecase_test.py  utils_functions_test.py
tests/unit_test/mocks/: inmemory_postgres_repo.py  inmemory_redis_repo.py
