[tool.poetry]
name = "user-management-service"
version = "0.1.0"
description = ""
authors = ["Elizaveta Krutsko <elizaveta.krutsko@innowise-group.com>"]
readme = "README.md"
packages = [{include = "user_management_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
