[tool.poetry]
name = "user-management-service"
version = "0.1.0"
description = ""
authors = ["Elizaveta Krutsko <elizaveta.krutsko@innowise-group.com>"]
readme = "README.md"
packages = [{include = "user_management_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.17"
pydantic = "^1.10.9"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
